tekton/backend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: backend-trigger
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-backend-trigger
    weight: 100
