tekton/frontend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend-trigger
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-frontend-trigger
    weight: 100
