tekton/manifest.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-ref: 175b0c7d956e600ac8085c2a22b6943201883651
    app.openshift.io/vcs-uri: https://github.com/cloud-native-garage-method-cohort/squad6-application-frontend
  labels:
    app: room6-project
    app.kubernetes.io/instance: room6-project
    app.kubernetes.io/name: room6-project-room6-frontend-app
    app.openshift.io/runtime: js
  name: room-6-frontend-app
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8501
  selector:
    app: room6-project
    app.kubernetes.io/instance: room6-project
    app.kubernetes.io/name: room6-project-room6-frontend-app
    app.openshift.io/runtime: js
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/vcs-ref: 175b0c7d956e600ac8085c2a22b6943201883651
    app.openshift.io/vcs-uri: https://github.com/cloud-native-garage-method-cohort/squad6-application-frontend
  labels:
    app: room6-project
    app.kubernetes.io/instance: room6-project
    app.kubernetes.io/name: room6-project-room6-frontend-app
    app.openshift.io/runtime: js
  name: room-6-frontend-app
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: room6-project
      app.kubernetes.io/instance: room6-project
      app.kubernetes.io/name: room6-project-room6-frontend-app
      app.openshift.io/runtime: js
  template:
    metadata:
      annotations:
        app.openshift.io/vcs-ref: 175b0c7d956e600ac8085c2a22b6943201883651
        app.openshift.io/vcs-uri: https://github.com/cloud-native-garage-method-cohort/squad6-application-frontend
      creationTimestamp: null
      labels:
        app: room6-project
        app.kubernetes.io/instance: room6-project
        app.kubernetes.io/name: room6-project-room6-frontend-app
        app.openshift.io/runtime: js
    spec:
      containers:
      - env:
        - name: INGRESS_HOST
        - name: PROTOCOLS
        - name: LOG_LEVEL
          value: debug
        image: quay.io/nickmerrett/room6-frontend:175b0c7d956e600ac8085c2a22b6943201883651
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8501
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: room-6-frontend-app
apiVersion: v1
  annotations:
    app.openshift.io/vcs-ref: 175b0c7d956e600ac8085c2a22b6943201883651
    app.openshift.io/vcs-uri: https://github.com/cloud-native-garage-method-cohort/squad6-application-frontend
  labels:
    app.kubernetes.io/name: room6-project-room6-frontend-app
    app.openshift.io/runtime: js
  name: room-6-frontend-app
spec:
    port: 80
    protocol: TCP
    targetPort: 8501
  selector:
    app: room6-project
    app.kubernetes.io/instance: room6-project
    app.kubernetes.io/name: room6-project-room6-frontend-app
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/vcs-ref: 175b0c7d956e600ac8085c2a22b6943201883651
    app: room6-project
    app.kubernetes.io/instance: room6-project
    app.kubernetes.io/name: room6-project-room6-frontend-app
    app.openshift.io/runtime: js
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: room6-project
      app.kubernetes.io/instance: room6-project
      app.kubernetes.io/name: room6-project-room6-frontend-app
      app.openshift.io/runtime: js
  template:
    metadata:
      annotations:
        app.openshift.io/vcs-ref: 175b0c7d956e600ac8085c2a22b6943201883651
        app.openshift.io/vcs-uri: https://github.com/cloud-native-garage-method-cohort/squad6-application-frontend
      creationTimestamp: null
        app.kubernetes.io/instance: room6-project
        app.kubernetes.io/name: room6-project-room6-frontend-app
        app.openshift.io/runtime: js
    spec:
      containers:
        - name: PROTOCOLS
        - name: LOG_LEVEL
          value: debug
        image: quay.io/nickmerrett/room6-frontend:175b0c7d956e600ac8085c2a22b6943201883651
          failureThreshold: 3
            port: 8501
            scheme: HTTP
          periodSeconds: 10
                                        successThreshold: 1
        ports:
        - containerPort: 8501
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8501
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-ref: 175b0c7d956e600ac8085c2a22b6943201883651
    app.openshift.io/vcs-uri: https://github.com/cloud-native-garage-method-cohort/squad6-application-frontend
    argocd.argoproj.io/sync-options: Validate=false
    openshift.io/host.generated: "true"
  labels:
    app: room6-project
    app.kubernetes.io/instance: room6-project
    app.kubernetes.io/name: room6-project-room6-frontend-app
    app.openshift.io/runtime: js
  name: room-6-frontend-app
spec:
  tls:
    termination: edge
  to:
    kind: Service
    name: room-6-frontend-app
    weight: 100
  wildcardPolicy: None
